# risc0-foundry-template

./: Cargo.toml
contracts/: Square.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: lib.rs
methods/src/: lib.rs
tests/: Square.t.sol
